# mini-ml-bidirectional-typing

./: .gitignore  CHANGELOG.md  README.md  mini-ml-bidirectional-typing.cabal
app/: Context.hs  Eval.hs  Expr.hs  Main.hs  Parser.hs  Tokenizer.hs  Typechecker.hs
