cabal-version:      2.4
name:               mini-ml-bidirectional-typing
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             AfonsoRib
maintainer:         afonsoviegas0@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable mini-ml-biderctional-typing
    main-is:          Main.hs
    -- hs-source-dirs:   app, src

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      containers >= 0.6.4.1,
                      parsec >=3.1 && <4
    hs-source-dirs:   app
    default-language: Haskell2010
